footer fixed
pushes footer to bottom of image. Footer kept covering image, especially when minimized, this forces footer to be under image

--- a/BarberShopHome.css
+++ b/BarberShopHome.css
@@ -6,10 +6,18 @@
     box-sizing: border-box;
     font-family: Sorts  Mill Goudy, serif;
 }
+
+html, body {
+    height: 100%; /* Ensure the full height */
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    min-height: 100vh;
-    background-image: url(https://images.squarespace-cdn.com/content/v1/643ac840b155935e5f0388c7/0d064af1-88ce-467e-bf43-ea31725bccc0/FDCF3C26-B0B1-478E-9669-3570C6CC5D0C.jpeg);
-    background-size: 1200px;
+    display: flex;
+    flex-direction: column; /* Align content in a column */
+    min-height: 100vh; /* Minimum height of viewport */
+    background-color: black;
 }
 
 .header {
@@ -85,18 +93,20 @@ body {
     }
 }
 
+.background_image > img{
+    padding-top: 100px;
+    width: 100%;
+}
+
 /* Footer Styles*/
 .container{
     max-width:1170px;
     margin:auto;
 }
 .footer{
-    background-color: black;
+    background-color: black; /*took out position:fixed to allow the image to be pushed under it*/
     padding: 70px 0;
-    position: fixed;
     width: 100%;
-    bottom: 0;
-    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,6 +165,10 @@ ul{
 .footer-col ul li a:hover{
     color:#ffffff;
     padding-left: 8px;
+}
+
+.content {
+    flex: 1; /* Allows content to expand and push footer down */
 }
 
 /*Responsive!*/
